<resources>

    <string name="common_copy">copy</string>
    <string name="common_paste">paste</string>
    <string name="common_refresh">refresh</string>

    <string name="app_name">Toolkit</string>
    <string name="auto_cancel">auto cancel</string>
    <string name="slide_delete">slide delete</string>
    <string name="vibrate">vibrate</string>
    <string name="ongoing">ongoing(cannot cancel by other apps)</string>
    <string name="ticker_text">this is default ticker text</string>
    <string name="content_info">this is default content info</string>
    <string name="content_title">this is default title</string>
    <string name="content_big_title">this is default big title</string>
    <string name="context_text">this is default content text</string>
    <string name="sub_text">this is default sub text</string>
    <string name="long_text">this is a very very very very very very very very very long text, I
        think it is long enough to bother you. but I meat to show you something new. This is
        BigTextStyle. Big text, um...
    </string>
    <string name="pop_big_image_notification">Big Image Style</string>
    <string name="pop_big_text_notification">Big Text Style</string>
    <string name="pop_in_box_notification">In Box Style</string>
    <string name="pop_in_box_msg_count">this is text %s</string>
    <string name="pop_in_box_msg_another_msg">another msg</string>
    <string name="click_first_button">Click BIG IMAGE STYLE first</string>

    <string name="end_activity_tips">YOU FINALLY GOT ME!</string>

    <string name="refresh_activity_tip">The child of SwipeRefreshLayout can ONLY HAS ONE DIRECT
        CHILD, and MUST BE SCROLLABLE
    </string>
</resources>
