<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp">

    <CheckBox
        android:id="@+id/auto_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_cancel"/>
    <CheckBox
        android:id="@+id/ongoing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ongoing"/>
    <CheckBox
        android:id="@+id/vibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibrate"
    />

    <Button
        android:id="@+id/big_text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pop_big_text_notification"
    />
    <Button
        android:id="@+id/big_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_big_image_notification"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/in_box_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_big_image_notification"/>
        <Button
            android:id="@+id/in_box_another_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pop_in_box_msg_another_msg"/>
    </LinearLayout>

</LinearLayout>